[package]
name = "casper-cl-fuzzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = {path = "/mnt/2tb/casper-audit/cl/casper-node/types"}
libc = "0.2.0"
serde_json = { version = "1.0.59", default-features = false, features = ["alloc"] }
