[package]
name = "casper-fuzzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]

casper-execution-engine = {git = "https://github.com/casper-network/casper-node.git"}
casper-engine-test-support = {git = "https://github.com/casper-network/casper-node.git"}
casper-types = {git = "https://github.com/casper-network/casper-node.git"}

wasmparser = "0.84.0"
libc = "0.2.0"
lazy_static = "1.4.0"
once_cell = "1.10.0"

#[patch.crates-io]
#wasmi = { path = "/mnt/2tb/wasm-harnesses/casper/wasmi-0.8.0"}

[profile.release]
debug-assertions = true
