[package]
name = "casper-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-execution-engine = {git="https://github.com/casper-network/casper-node"}
casper-engine-test-support = {git="https://github.com/casper-network/casper-node"}
casper-types = {git="https://github.com/casper-network/casper-node"}
